intel/bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_mul_with_main/log.txt
bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_mul_with_main/extr_.opensslcryptoeccurve25519.c_fe_mul_with_main.c:239:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe f;
           ^
             = nullptr
bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_mul_with_main/extr_.opensslcryptoeccurve25519.c_fe_mul_with_main.c:240:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe g;
           ^
             = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
